--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "@types/node": "20.10.5",
+    "@types/node": "^22.5.4",
     "@types/react": "18.2.45",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
