--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@types/react-dom": "^18.2.18",
+    "@vercel/node": "^3.2.12",
     "bson": "^6.2.0",
     "bufferutil": "^4.0.8",
     "clsx": "^1.2.1",
